:art: 學員權益資料，用DB做存取，用user permission做最新一筆、user permission log紀錄移除資料、product 做勾選選項
